2011-05-05  Jer Noble  <jer.noble@apple.com>

        Reviewed by Maciej Stachowiak.

        Removing the full screen element via parent.innerHTML="" does not result in a webkitfullscreenchange event.
        https://bugs.webkit.org/show_bug.cgi?id=60278

        * fullscreen/full-screen-remove-children-expected.txt: Added.
        * fullscreen/full-screen-remove-children.html: Added.
        * fullscreen/full-screen-test.js: Fixed an exception when running in Safari.

2011-05-10  Kenichi Ishibashi  <bashi@chromium.org>

        Reviewed by Tony Chang.

        REGRESSION(r85013): platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=60079

        Update the expected results.

        * platform/chromium-linux-x86_64/platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.png: Added.
        * platform/chromium-linux-x86_64/platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.txt:
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.png:
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.txt:
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html:
        * platform/chromium-linux/platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.png: Removed.
        * platform/chromium/test_expectations.txt:

2011-05-10  Kenji Imasaki  <imasaki@chromium.org>

        Reviewed by David Levin.

        [Chromium] Add rebaselines for video-layer-crash.
        https://bugs.webkit.org/show_bug.cgi?id=60548

        Chromium bug is http://crbug.com/60744. Expected images need to be
        updated because they are incorrect. The cause of this image change
        cannot be easily determined at present because the test has been
        broken for so long.
